# Anchor-Pinocchio-Security

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
docs/: SECURITY_DEEP_DIVE.md
programs/01-missing-signer-check/: Cargo.toml  README.md
programs/01-missing-signer-check/src/: lib.rs
programs/02-account-validation/: Cargo.toml  README.md
programs/02-account-validation/src/: lib.rs
programs/03-integer-overflow/: Cargo.toml  README.md
programs/03-integer-overflow/src/: lib.rs
programs/04-arbitrary-cpi/: Cargo.toml  README.md
programs/04-arbitrary-cpi/src/: lib.rs
programs/05-reinitialization/: Cargo.toml  README.md
programs/05-reinitialization/src/: lib.rs
programs/06-type-cosplay/: Cargo.toml  README.md
programs/06-type-cosplay/src/: lib.rs
programs/07-closing-accounts/: Cargo.toml  README.md
programs/07-closing-accounts/src/: lib.rs
tests/: README.md
