[package]
name = "missing-signer-check"
version = "0.1.0"
description = "Security Pattern: Missing Signer Check Vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "missing_signer_check"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
