[package]
name = "account-validation"
version = "0.1.0"
description = "Security Pattern: Account Validation & Owner Check Vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "account_validation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
