[package]
name = "arbitrary-cpi"
version = "0.1.0"
description = "Security Pattern: Arbitrary CPI (Cross-Program Invocation) Vulnerabilities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arbitrary_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
