[package]
name = "reinitialization"
version = "0.1.0"
description = "Security Pattern: Reinitialization Attack Vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reinitialization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
