[package]
name = "type-cosplay"
version = "0.1.0"
description = "Security Pattern: Type Cosplay Attack Vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "type_cosplay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
